add form and fields for login details

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <meta name="keywords" content="math,differential equations,mechanics">
 </head>
 <body>
-    <div id="login-img">
-        
+    <div id="login-img" role="img" aria-label="drawing block and instruments"></div>
+    <div id="login-holder">
+        <form id="login-form" action="#">
+            <label for="email">Email</label>
+            <input type="email" id="user-name" name="user-email">
+            <label for="user-pass">Password</label>
+            <input type="password" id="user-pass" name="user-password">
+        </form>
     </div>
-    
 </body>
 </html>
