add header to login and suscribe pages with common links to both

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             </div>
         </div>
         <div id="login-holder">
+            <header>
+                <ul>
+                    <li><a href="index.html">
+                            <h3>Login</h3>
+                        </a></li>
+                    <li><a href="suscribe.html">
+                            <h3>Suscribe</h3>
+                        </a></li>
+                </ul>
+            </header>
             <form id="login-form" action="#">
                 <fieldset id="login-field">
                     <legend>
@@ -41,7 +51,7 @@
             <div id="suscribe-link-div">
                 <h4>Or</h4>
                 <br>
-                <h4>Suscribe <a href="#">here</a></h4>
+                <h4>Suscribe <a href="suscribe.html">here</a></h4>
             </div>
         </div>
     </div>
