move comment beneath the website name to the top of the login area

--- a/suscribe.html
+++ b/suscribe.html
@@ -17,8 +17,6 @@
         <div id="login-img" role="img" aria-label="drawing block and instruments">
             <div>
                 <h1>DIFFERENTIAL</h1>
-                <h3>Demonstrating the Power of</h3>
-                <h3>Differential Equations</h3>
             </div>
         </div>
         <div id="login-holder">
@@ -31,6 +29,10 @@
                             <h3>Suscribe</h3>
                         </a></li>
                 </ul>
+                <div>
+                    <h3>Demonstrating the Power of</h3>
+                    <h3>Differential Equations</h3>
+                </div>
             </header>
             <form id="login-form" action="#">
                 <fieldset id="login-field">
