--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
         <div id="login-img" role="img" aria-label="drawing block and instruments">
             <div>
                 <h1>DIFFERENTIAL</h1>
-                <h3>Demonstrating the Power of</h3>
-                <h3>Differential Equations</h3>
             </div>
         </div>
         <div id="login-holder">
@@ -31,6 +29,10 @@
                             <h3>Suscribe</h3>
                         </a></li>
                 </ul>
+                <div>
+                    <h2>Demonstrating the Power of</h2>
+                    <h2>Differential Equations</h2>
+                </div>
             </header>
             <form id="login-form" action="#">
                 <fieldset id="login-field">
@@ -39,11 +41,11 @@
                     </legend>
                     <label for="email">Email: </label>
                     <br>
-                    <input type="email" id="user-name" name="user-email" class="login-input">
+                    <input type="email" id="user-name" name="user-email" class="login-input" required>
                     <br>
                     <label for="user-pass">Password: </label>
                     <br>
-                    <input type="password" id="user-pass" name="user-password" class="login-input">
+                    <input type="password" id="user-pass" name="user-password" class="login-input" required>
                     <br>
                     <button id="login-button" type="submit">Login</button>
                 </fieldset>
