add js code to handle login button

--- a/suscribe.html
+++ b/suscribe.html
@@ -34,8 +34,8 @@
                     <h3>Differential Equations</h3>
                 </div>
             </header>
-            <form id="login-form" action="#">
-                <fieldset id="login-field">
+            <form id="suscribe-form" action="#">
+                <fieldset id="suscribe-field">
                     <legend>
                         <h3>Login Deatils</h3>
                     </legend>
@@ -47,7 +47,7 @@
                     <br>
                     <input type="password" id="user-pass" name="user-password" class="login-input">
                     <br>
-                    <button id="login-button" type="submit">Login</button>
+                    <button id="suscribe-button" type="submit">Login</button>
                 </fieldset>
             </form>
         </div>
