--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h2>Differential Equations</h2>
                 </div>
             </header>
-            <form id="login-form" action="#">
+            <form id="login-form" action="userpage.html">
                 <fieldset id="login-field">
                     <legend>
                         <h3>Login Deatils</h3>
