change style of login div and suscribe button

--- a/suscribe.html
+++ b/suscribe.html
@@ -30,8 +30,8 @@
                         </a></li>
                 </ul>
                 <div>
-                    <h3>Demonstrating the Power of</h3>
-                    <h3>Differential Equations</h3>
+                    <h2>Demonstrating the Power of</h2>
+                    <h2>Differential Equations</h2>
                 </div>
             </header>
             <form id="suscribe-form" action="userpage.html">
@@ -61,7 +61,7 @@
                     <br>
                     <input type="password" id="user-pass" name="user-password" class="login-input">
                     <br>
-                    <button id="suscribe-button" type="submit">Login</button>
+                    <button id="suscribe-button" type="submit">Suscribe</button>
                 </fieldset>
             </form>
         </div>
