change form.submit to window location href to go from login to userpage

--- a/userpage.html
+++ b/userpage.html
@@ -14,9 +14,10 @@
 
 <body>
     <header>
-        <p>Hello user</p>
+        <p>Hello user <span id="user-page-name"></span></p>
         <a href="index.html">Log out</a>
     </header>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
