--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 </head>
 
 <body>
+
     <div id="outer-login-page">
+<!-- Holder of image at the left of login page -->
         <div id="login-img" role="img" aria-label="drawing block and instruments">
             <div>
                 <h1>DIFFERENTIAL</h1>
             </div>
         </div>
+<!-- holds header and login form to the right of the screen -->
         <div id="login-holder">
+<!-- Header holds links to suscribe and login pages -->
             <header>
                 <ul>
                     <li><a href="index.html">
@@ -34,6 +38,7 @@
                     <h2>Differential Equations</h2>
                 </div>
             </header>
+<!-- Login form containing two fields: user email and password, along with login button-->
             <form id="login-form" action="userpage.html">
                 <fieldset id="login-field">
                     <legend>
@@ -50,6 +55,7 @@
                     <button id="login-button" type="submit">Login</button>
                 </fieldset>
             </form>
+<!-- This div contains a direct link to suscribe page -->
             <div id="suscribe-link-div">
                 <h4>Or</h4>
                 <br>
