add local storage for user info from login page to use in userpage

--- a/userpage.html
+++ b/userpage.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <p>Hello user <span id="user-page-name"></span></p>
+        <p>Hello user <span id="user-page-name"></span><span id="user-page-email"></span><span id="user-page-degree"></span></p>
         <a href="index.html">Log out</a>
     </header>
     <script src="assets/js/script.js"></script>
