--- a/suscribe.html
+++ b/suscribe.html
@@ -55,7 +55,7 @@
                     <br>
                     <label for="email">Email: </label>
                     <br>
-                    <input type="email" id="user-name" name="user-email" class="login-input">
+                    <input type="email" id="user-email" name="user-email" class="login-input">
                     <br>
                     <label for="user-pass">Password: </label>
                     <br>
