rename all js files

--- a/userpage.html
+++ b/userpage.html
@@ -17,7 +17,7 @@
         <p>Hello user <span id="user-page-name"></span><span id="user-page-email"></span><span id="user-page-degree"></span></p>
         <a href="index.html">Log out</a>
     </header>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script-u.js"></script>
 </body>
 
 </html>
