--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script-l.js"></script>
 </body>
 
 </html>
