--- a/suscribe.html
+++ b/suscribe.html
@@ -66,7 +66,7 @@
             </form>
         </div>
     </div>
-    <script src="assets/js/script2.js"></script>
+    <script src="assets/js/script-s.js"></script>
 </body>
 
 </html>
