add header to userpage

--- a/userpage.html
+++ b/userpage.html
@@ -14,9 +14,18 @@
 
 <body>
     <header>
-        <p>Hello user <span id="user-page-name"></span><span id="user-page-email"></span><span id="user-page-degree"></span></p>
-        <a href="index.html">Log out</a>
+        <div id="header-div">
+            <div>
+                <h1>WELCOME TO DIFFERENTIAL, <span id="user-first-name"></span>!</h1>
+            </div>
+            <div>
+                <a href="index.html"><h3>Log out</h3></a>
+            </div>
+        </div>
     </header>
+    <sectio>
+        <div id="hero-image" role="img" ></div>
+    </sectio>
     <script src="assets/js/script-u.js"></script>
 </body>
 
