add user info button to userpage

--- a/userpage.html
+++ b/userpage.html
@@ -19,7 +19,13 @@
                 <h1>WELCOME TO DIFFERENTIAL, <span id="user-first-name"></span>!</h1>
             </div>
             <div>
-                <a href="index.html"><h3>Log out</h3></a>
+                <button id="user-button">YOU</button>
+                <div id="user-info-div">
+                    <a href="index.html">
+                        <h3>Log out</h3>
+                    </a>
+                </div>
+                
             </div>
         </div>
     </header>
