--- a/userpage.html
+++ b/userpage.html
@@ -21,6 +21,9 @@
             <div>
                 <button id="user-button">YOU</button>
                 <div id="user-info-div">
+                    <h3 id="user-name"></h3>
+                    <h3 id="user-email"></h3>
+                    <h3 id="user-education"></h3>
                     <a href="index.html">
                         <h3>Log out</h3>
                     </a>
