style user info button

--- a/userpage.html
+++ b/userpage.html
@@ -19,7 +19,7 @@
                 <h1>WELCOME TO DIFFERENTIAL, <span id="user-first-name"></span>!</h1>
             </div>
             <div>
-                <button id="user-button">YOU</button>
+                <button id="user-button"></button>
                 <div id="user-info-div">
                     <h3 id="user-name"></h3>
                     <h3 id="user-email"></h3>
