add divs for instruction and game areas and add flex css

--- a/userpage.html
+++ b/userpage.html
@@ -32,9 +32,22 @@
             </div>
         </div>
     </header>
-    <sectio>
-        <div id="hero-image" role="img" ></div>
-    </sectio>
+    <section id="instructions">
+        <h2>GAME INSTRUCTIONS</h2>
+        <div >
+            <div class="instruction-child"></div>
+            <div class="instruction-child"></div>
+            <div class="instruction-child"></div>
+            <div class="instruction-child"></div>
+        </div>
+    </section>
+    <section id="game-area">
+        <h2>LET´S PLAY</h2>
+        <div>
+            <div id="game-area-left"></div>
+            <div id="game-area-right"></div>
+        </div>
+    </section>
     <script src="assets/js/script-u.js"></script>
 </body>
 
