add holder to play area using svg path

--- a/userpage.html
+++ b/userpage.html
@@ -24,14 +24,17 @@
                     <h3 id="user-name"></h3>
                     <h3 id="user-email"></h3>
                     <h3 id="user-education"></h3>
-                    <a href="index.html">
-                        <h3>Log out</h3>
-                    </a>
+                    <h3><a href="index.html">
+                        Log out
+                    </a></h3>
                 </div>
                 
             </div>
         </div>
     </header>
+    <section>
+        <div id="hero-image" role="img" aria-label="first degree differential equations"></div>
+    </section>
     <section id="instructions">
         <h2>GAME INSTRUCTIONS</h2>
         <div >
@@ -44,7 +47,12 @@
     <section id="game-area">
         <h2>LET´S PLAY</h2>
         <div>
-            <div id="game-area-left"></div>
+            <div id="game-area-left">
+                <svg width="100" height="250">
+                    <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
+                    V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="blue">
+                </svg>
+            </div>
             <div id="game-area-right"></div>
         </div>
     </section>
