--- a/suscribe.html
+++ b/suscribe.html
@@ -47,10 +47,10 @@
                     <br>
                     <select id="education" name="education" class="login-input" required>
                         <option value="">Please select</option>
-                        <option value="level5">Level 5</option>
-                        <option value="level6">Level 6</option>
-                        <option value="level7">Level 7</option>
-                        <option value="level8">Level 8</option>
+                        <option value="Level 5">Level 5</option>
+                        <option value="Level 6">Level 6</option>
+                        <option value="Level 7">Level 7</option>
+                        <option value="Level 8">Level 8</option>
                     </select>
                     <br>
                     <label for="email">Email: </label>
