add buttons to create spring and disspation elements

--- a/userpage.html
+++ b/userpage.html
@@ -48,6 +48,11 @@
         <h2>LET´S PLAY</h2>
         <div>
             <div id="game-area-left">
+                <div>
+                    <button id="spring-button">SPRING</button>
+                    <button id="dissipator-button">SPRING</button>
+                    <button>DISSIPATOR</button>
+                </div>
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
                     V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="blue">
