--- a/userpage.html
+++ b/userpage.html
@@ -50,8 +50,7 @@
             <div id="game-area-left">
                 <div>
                     <button id="spring-button">SPRING</button>
-                    <button id="dissipator-button">SPRING</button>
-                    <button>DISSIPATOR</button>
+                    <button id="dissipator-button">DISSIPATOR</button>
                 </div>
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
