add code to addSpring function to iddentify the existing number of spring elements

--- a/userpage.html
+++ b/userpage.html
@@ -46,9 +46,10 @@
     </section>
     <section id="game-area">
         <h2>LET´S PLAY</h2>
+        <p id="dummy-p"></p>
         <div>
             <div id="game-area-left">
-                <div>
+                <div id="game-buttons-area">
                     <button id="spring-button">SPRING</button>
                     <button id="dissipator-button">DISSIPATOR</button>
                 </div>
