create functions to make spring and dissipator elements draggable

--- a/userpage.html
+++ b/userpage.html
@@ -25,10 +25,10 @@
                     <h3 id="user-email"></h3>
                     <h3 id="user-education"></h3>
                     <h3><a href="index.html">
-                        Log out
-                    </a></h3>
+                            Log out
+                        </a></h3>
                 </div>
-                
+
             </div>
         </div>
     </header>
@@ -37,7 +37,7 @@
     </section>
     <section id="instructions">
         <h2>GAME INSTRUCTIONS</h2>
-        <div >
+        <div>
             <div class="instruction-child"></div>
             <div class="instruction-child"></div>
             <div class="instruction-child"></div>
@@ -50,8 +50,13 @@
         <div>
             <div id="game-area-left">
                 <div id="game-buttons-area">
+                    <span id="holder1"></span>
                     <button id="spring-button" class="game-buttons">SPRING</button>
                     <button id="dissipator-button" class="game-buttons">DISSIPATOR</button>
+                    <span id="holder2"></span>
+                    <span id="holder3"></span>
+                    <span id="holder4"></span>
+                    <span id="holder5"></span>
                 </div>
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
