add reset button functionality via js function resetGame

--- a/userpage.html
+++ b/userpage.html
@@ -62,6 +62,8 @@
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
                     V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="blue">
                 </svg>
+                <br>
+                <button id="reset-button" class="game-buttons">RESET</button>
             </div>
             <div id="game-area-right"></div>
         </div>
