add a central div to game area and moddify distannce function to add a label to elements when anchored

--- a/userpage.html
+++ b/userpage.html
@@ -65,6 +65,7 @@
                 <br>
                 <button id="reset-button" class="game-buttons">RESET</button>
             </div>
+            <div id="game-area-center"></div>
             <div id="game-area-right"></div>
         </div>
     </section>
