format moving divs text and adding canceling function to move after movind div approaches anchor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <form id="login-form" action="userpage.html">
                 <fieldset id="login-field">
                     <legend>
-                        <h3>Login Deatils</h3>
+                        <h3>Login Details</h3>
                     </legend>
                     <label for="email">Email: </label>
                     <br>
