add skeleton of table to the right about in game section

--- a/userpage.html
+++ b/userpage.html
@@ -66,7 +66,28 @@
                 <button id="reset-button" class="game-buttons">RESET</button>
             </div>
             <div id="game-area-center"></div>
-            <div id="game-area-right"></div>
+            <div id="game-area-right">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Left</th>
+                            <th>Right</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
     <script src="assets/js/script-u.js"></script>
