--- a/userpage.html
+++ b/userpage.html
@@ -67,14 +67,21 @@
             </div>
             <div id="game-area-center"></div>
             <div id="game-area-right">
+                <h3>PHYSICAL DESCRIPTION</h3>
                 <table>
                     <thead>
                         <tr>
                             <th>Left</th>
                             <th>Right</th>
+                            <th>Addition</th>
                         </tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
                         <tr>
                             <td></td>
                             <td></td>
