style background colors of instruction divs

--- a/userpage.html
+++ b/userpage.html
@@ -38,10 +38,10 @@
     <section id="instructions">
         <h2>GAME INSTRUCTIONS</h2>
         <div>
-            <div class="instruction-child"></div>
-            <div class="instruction-child"></div>
-            <div class="instruction-child"></div>
-            <div class="instruction-child"></div>
+            <div class="instruction-child-black"></div>
+            <div class="instruction-child-blue"></div>
+            <div class="instruction-child-black"></div>
+            <div class="instruction-child-blue"></div>
         </div>
     </section>
     <section id="game-area">
@@ -60,7 +60,7 @@
                 </div>
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
-                    V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="blue">
+                    V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="rgb(255, 169, 87)">
                 </svg>
                 <br>
                 <button id="reset-button" class="game-buttons">RESET</button>
