style game area buttons to fit instructions patterns

--- a/userpage.html
+++ b/userpage.html
@@ -36,7 +36,7 @@
         <div id="hero-image" role="img" aria-label="first degree differential equations"></div>
     </section>
     <section id="instructions">
-        <h2>GAME INSTRUCTIONS</h2>
+        <h2>GAME DESCRIPTION</h2>
         <div>
             <div class="instruction-child-black"></div>
             <div class="instruction-child-blue"></div>
