--- a/userpage.html
+++ b/userpage.html
@@ -60,7 +60,7 @@
                 </div>
                 <svg width="100" height="250">
                     <path d="M0 0 H100 V50 H70 V100 H100 V150 H70 V200 H100 V250 H0
-                    V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="rgb(255, 169, 87)">
+                    V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="#a75910">
                 </svg>
                 <br>
                 <button id="reset-button" class="game-buttons">RESET</button>
