eliminate hero-image and add display text to writeEquation function

--- a/userpage.html
+++ b/userpage.html
@@ -32,9 +32,6 @@
             </div>
         </div>
     </header>
-    <section>
-        <div id="hero-image" role="img" aria-label="first degree differential equations"></div>
-    </section>
     <section id="instructions">
         <h2>GAME DESCRIPTION</h2>
         <div>
@@ -65,7 +62,8 @@
                 <br>
                 <button id="reset-button" class="game-buttons">RESET</button>
             </div>
-            <div id="game-area-center"></div>
+            <div id="game-area-center">
+            </div>
             <div id="game-area-right">
                 <h3>PHYSICAL DESCRIPTION</h3>
                 <table>
