add media queu to handle intructions section on tablet

--- a/userpage.html
+++ b/userpage.html
@@ -35,10 +35,24 @@
     <section id="instructions">
         <h2>GAME DESCRIPTION</h2>
         <div>
-            <div class="instruction-child-black"></div>
-            <div class="instruction-child-blue"></div>
-            <div class="instruction-child-black"></div>
-            <div class="instruction-child-blue"></div>
+            <div class="instruction-child-black">
+                <h3>What to Expect</h3>
+                <p>Differential does not aim to teach you to solve differential equations, but to teach you
+                   to built them for especific problems. At the same time you will see their relevance.  
+                </p>
+            </div>
+            <div class="instruction-child-blue">
+                <h3>What to Expect</h3>
+                <p>Differential does not aim to teach you to solve differential equations, but to teach you
+                to built them for especific problems. At the same time you will see their relevance.
+                </p>
+            </div>
+            <div class="instruction-child-black">
+                <h3>Instructions</h3>
+                <p>Differential does not aim to teach you to solve differential equations, but to teach you
+                to built them for especific problems. At the same time you will see their relevance.
+                </p>
+            </div>
         </div>
     </section>
     <section id="game-area">
