add text to instructions sections abouts

--- a/userpage.html
+++ b/userpage.html
@@ -37,21 +37,27 @@
         <div>
             <div class="instruction-child-black">
                 <h3>What to Expect</h3>
-                <p>Differential does not aim to teach you to solve differential equations, but to teach you
-                   to built them for especific problems. At the same time you will see their relevance.  
-                </p>
+                <ul>
+                    <li>Differential will NOT teach you to how to solve differential equations</li>
+                    <li>Differential WILL show you how to create a differential equation for a simple
+                        problem by bluiding it step by step
+                    </li>
+                </ul>
             </div>
             <div class="instruction-child-blue">
-                <h3>What to Expect</h3>
-                <p>Differential does not aim to teach you to solve differential equations, but to teach you
-                to built them for especific problems. At the same time you will see their relevance.
+                <h3>Study Case</h3>
+                <p>Mechanical relaxation is a simple example of differential equations.
                 </p>
+                <p></p>
             </div>
             <div class="instruction-child-black">
                 <h3>Instructions</h3>
-                <p>Differential does not aim to teach you to solve differential equations, but to teach you
-                to built them for especific problems. At the same time you will see their relevance.
-                </p>
+                <ol>
+                    <li>Click either the spring or dissipator button</li>
+                    <li>Drag the element to one socket</li>
+                    <li>No more than 2 elements of same type</li>
+                    <li>Check the physics in the side abouts</li>
+                </ol>
             </div>
         </div>
     </section>
@@ -102,6 +108,10 @@
                         </tr>
                     </tbody>
                 </table>
+                <br>
+                <p>&sigma; = Force on the element</p>
+                <p>&gamma; = Deformation on the element</p>
+                <p>k, &eta; = Constants</p>
             </div>
         </div>
     </section>
