add final text to central about of instruction section and justified the text

--- a/userpage.html
+++ b/userpage.html
@@ -46,9 +46,11 @@
             </div>
             <div class="instruction-child-blue">
                 <h3>Study Case</h3>
-                <p>Mechanical relaxation is a simple example of differential equations.
+                <p>Mechanical relaxation is a simple example of linear first order differential equations.
                 </p>
-                <p></p>
+                <br>
+                <p>While springs store energy, dissipators lose energy in time.
+                     Depending on how they are connected, the equation needs to be reaaranged.</p>
             </div>
             <div class="instruction-child-black">
                 <h3>Instructions</h3>
