add docking buttons and new criteria for addition of spring and dissipator to avoid conflict in mobile devices

--- a/userpage.html
+++ b/userpage.html
@@ -82,6 +82,10 @@
                     V200 H30 V150 H0 V100 H30 V50 H0 Z" fill="#a75910">
                 </svg>
                 <br>
+                <button id="socket-1" class="round-button"></button>
+                <button id="socket-2" class="round-button"></button>
+                <button id="socket-3" class="round-button"></button>
+                <button id="socket-4" class="round-button"></button>
                 <button id="reset-button" class="game-buttons">RESET</button>
             </div>
             <div id="game-area-center">
