add classes to 2nd instruction to switch from desktop to mobile

--- a/userpage.html
+++ b/userpage.html
@@ -56,7 +56,8 @@
                 <h3>Instructions</h3>
                 <ol>
                     <li>Click either the spring or dissipator button</li>
-                    <li>Drag the element to one socket</li>
+                    <li><p class="desktop-instruction">Drag the element to one socket</p>
+                        <p class="mobile-instruction">Touch  the socket to latch element</p></li>
                     <li>No more than 2 elements of same type</li>
                     <li>Check the physics in the side abouts</li>
                 </ol>
