fix text of case 7 in createDiffEquation function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </legend>
                     <label for="email">Email: </label>
                     <br>
-                    <input type="email" id="user-name" name="user-email" class="login-input" required>
+                    <input type="email" id="email" name="user-email" class="login-input" required>
                     <br>
                     <label for="user-pass">Password: </label>
                     <br>
