--- a/suscribe.html
+++ b/suscribe.html
@@ -41,7 +41,7 @@
                     </legend>
                     <label for="fname">Full Name: </label>
                     <br>
-                    <input type="text" id="fname" name="fname" class="login-input">
+                    <input type="text" id="fname" name="fname" class="login-input" required>
                     <br>
                     <label for="education">Highest Education Level</label>
                     <br>
@@ -55,11 +55,11 @@
                     <br>
                     <label for="email">Email: </label>
                     <br>
-                    <input type="email" id="user-email" name="user-email" class="login-input">
+                    <input type="email" id="user-email" name="user-email" class="login-input" required>
                     <br>
                     <label for="user-pass">Password: </label>
                     <br>
-                    <input type="password" id="user-pass" name="user-password" class="login-input">
+                    <input type="password" id="user-pass" name="user-password" class="login-input" required>
                     <br>
                     <button id="suscribe-button" type="submit">Suscribe</button>
                 </fieldset>
