fix email input id to match label for

--- a/suscribe.html
+++ b/suscribe.html
@@ -53,7 +53,7 @@
                         <option value="Level 8">Level 8</option>
                     </select>
                     <br>
-                    <label for="email">Email: </label>
+                    <label for="user-email">Email: </label>
                     <br>
                     <input type="email" id="user-email" name="user-email" class="login-input" required>
                     <br>
