add comments to suscribe page

--- a/suscribe.html
+++ b/suscribe.html
@@ -14,12 +14,15 @@
 
 <body>
     <div id="outer-login-page">
+<!-- Holder of image at the left of suscribe page -->
         <div id="login-img" role="img" aria-label="drawing block and instruments">
             <div>
                 <h1>DIFFERENTIAL</h1>
             </div>
         </div>
+<!-- holds header and suscribe form to the right of the screen -->
         <div id="login-holder">
+<!-- Header holds links to suscribe and login pages -->
             <header>
                 <ul>
                     <li><a href="index.html">
@@ -34,6 +37,7 @@
                     <h2>Differential Equations</h2>
                 </div>
             </header>
+<!-- Login form containing four fields along with login button-->
             <form id="suscribe-form" action="userpage.html">
                 <fieldset id="suscribe-field">
                     <legend>
