add span to h3 elements on user-info-div

--- a/userpage.html
+++ b/userpage.html
@@ -23,14 +23,13 @@
 <!--Burger button containing information of user and log out link-->
                 <button id="user-button"></button>
                 <div id="user-info-div">
-                    <h3 id="user-name"></h3>
-                    <h3 id="user-email"></h3>
-                    <h3 id="user-education"></h3>
+                    <h3><span id="user-name"></span></h3>
+                    <h3><span id="user-email"></span></h3>
+                    <h3><span id="user-education"></span></h3>
                     <h3><a href="index.html">
                             Log out
                         </a></h3>
                 </div>
-
             </div>
         </div>
     </header>
