change instruction text to include the no similar objects parallel in the sockets

--- a/userpage.html
+++ b/userpage.html
@@ -60,7 +60,7 @@
                     <li>Click either the spring or dissipator button</li>
                     <li><p class="desktop-instruction">Drag the element to one socket</p>
                         <p class="mobile-instruction">Touch  the socket to latch element</p></li>
-                    <li>No more than 2 elements of same type</li>
+                    <li>Only 2 elements of same type and no same elements parallel</li>
                     <li>Check the physics in the side abouts</li>
                 </ol>
             </div>
