change suscribe text to sign-up in index and suscribe pages

--- a/suscribe.html
+++ b/suscribe.html
@@ -29,7 +29,7 @@
                             <h3>Login</h3>
                         </a></li>
                     <li><a href="suscribe.html">
-                            <h3>Suscribe</h3>
+                            <h3>Sign-up</h3>
                         </a></li>
                 </ul>
                 <div>
