--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <h3>Login</h3>
                         </a></li>
                     <li><a href="suscribe.html">
-                            <h3>Suscribe</h3>
+                            <h3>Sign-up</h3>
                         </a></li>
                 </ul>
                 <div>
@@ -58,7 +58,7 @@
             <div id="suscribe-link-div">
                 <h4>Or</h4>
                 <br>
-                <h4>Suscribe <a href="suscribe.html">here</a></h4>
+                <h4>Sign-up <a href="suscribe.html">here</a></h4>
             </div>
         </div>
     </div>
